MSS-1795-alignemnt-issues

--- a/movado/cartridges/app_custom_movado/cartridge/client/default/scss/checkout/_checkoutComponents.scss
+++ b/movado/cartridges/app_custom_movado/cartridge/client/default/scss/checkout/_checkoutComponents.scss
@@ -1477,3 +1477,29 @@ $stored-payment-spacing: rem(16);
         }
     }
 }
+
+.col-wrapper-space-left {
+    @include custom-media-query-max($medium-screen-width) {
+        padding: rem(0) rem(10);
+    }
+
+    @include media-breakpoint-down(xs) {
+        padding: rem(0);
+    }
+
+    @include media-breakpoint-up(md) {
+        padding: rem(0) rem(10);
+    }
+
+    @include media-breakpoint-up(lg) {
+        padding: rem(0) rem(10);
+    }
+
+    @include media-breakpoint-up(xl) {
+        padding: rem(0) rem(10);
+    }
+
+    @include custom-media-query-1440($large-screen-width-1440) {
+        padding: rem(0) rem(15);
+    }
+}
