--- a/mvmt/cartridges/app_custom_storefront_mvmt/cartridge/client/default/scss/checkout/checkout.scss
+++ b/mvmt/cartridges/app_custom_storefront_mvmt/cartridge/client/default/scss/checkout/checkout.scss
@@ -933,6 +933,9 @@ header {
             justify-content: center;
             align-items: center;
             max-width: 100%;
+            position: sticky;
+            bottom: rem(0);
+            background-color: $grey20;
         
             .checkout-help-contact-info-container {
                 display: flex;
@@ -1380,5 +1383,5 @@ header {
     display: flex;
     justify-content: space-between;
     flex-direction: column;
-    min-height: 100vh;
+    min-height: 70vh;
 }
